Fixing linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "linebreak-style": "off",
+    "max-len": ["error", { "code": 300 }],
     "no-shadow": "off"
   },
   "ignorePatterns": [
